# zOS

./: .containerignore  .gitignore  AUDIO_HANDOFF.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  HACKING.md  Justfile  README.md  ZOS_DELME.md  ZOS_ROADMAP.md
.forgejo/workflows/: build-disk.yml  build.yml
.github/workflows/: build-disk.yml  build.yml
build_files/: build.sh
build_files/scripts/: install-dev-tools.sh  install-grub-theme.sh  install-hyprland.sh  install-user-configs.sh  nwg-install.sh  zos-first-login.sh  zos-setup.sh  zos-system.py
build_files/system_files/etc/greetd/: config.toml  hyprland.conf  regreet.toml
build_files/system_files/etc/profile.d/: zos-env.sh
build_files/system_files/etc/security/limits.d/: 99-zos.conf
build_files/system_files/etc/skel/: .gitconfig  .zshrc
build_files/system_files/etc/skel/.config/: starship.toml
build_files/system_files/etc/skel/.config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf  monitors.conf  user-keybinds.conf  user-settings.conf  user-windowrules.conf  workspaces.conf
build_files/system_files/etc/skel/.config/hyprpanel/: config.json  modules.json
build_files/system_files/etc/skel/.config/hyprshell/: config.ron  styles.css
build_files/system_files/etc/skel/.config/pipewire/pipewire.conf.d/: 10-zos-virtual-devices.conf
build_files/system_files/etc/skel/.config/waybar/: config.jsonc  style.css
build_files/system_files/etc/skel/.config/wezterm/: wezterm.lua
build_files/system_files/etc/skel/.config/wlogout/: layout  style.css
build_files/system_files/etc/skel/.config/zellij/: config.kdl
build_files/system_files/etc/xdg/xdg-desktop-portal/: hyprland-portals.conf
build_files/system_files/usr/lib/sysctl.d/: 99-zos-sysrq.conf
build_files/system_files/usr/lib/systemd/user/: zos-user-migrate.service
build_files/system_files/usr/lib/sysusers.d/: zos-greetd.conf
build_files/system_files/usr/lib/tmpfiles.d/: zos-regreet.conf
build_files/system_files/usr/share/applications/: coolercontrol.desktop  zos-settings.desktop
build_files/system_files/usr/share/polkit-1/actions/: com.zos.settings.policy
build_files/system_files/usr/share/polkit-1/rules.d/: 50-zos-passwordless.rules
build_files/system_files/usr/share/sddm/scripts/: Xsetup
build_files/system_files/usr/share/wayland-sessions/: hyprland-zos.desktop  zos-wm.desktop
build_files/system_files/usr/share/zos/: config-versions.json  custom-packages.json  zshrc
build_files/system_files/usr/share/zos/hypr/: autostart.conf  defaults.conf  keybinds.conf  mocha.conf  nvidia.conf  render.conf  windowrules.conf
build_files/system_files/usr/share/zos/scripts/: save-monitors.sh
disk_config/: iso-kde-nvidia.toml  iso-kde.toml
docs/: TESTING.md
docs/research/: phase-2-a-protocol-priority.md  phase-2-b-niri-reusable-code.md  phase-2-c-drm-nvidia-specifics.md  phase-2-fix-decoration-investigation.md  phase-2-output-management.md  phase-2-tearing-control.md  phase-2-udev-gaps.md  phase-3-floating-windows.md  phase-3-input-dispatch.md  phase-3-tiling-opt-in.md  phase-4-hyprland-animations.md  phase-4-smithay-effects.md
zos-cli/: Cargo.toml
zos-cli/src/: compositor.rs  doctor.rs  main.rs  screenshot.rs
zos-cli/src/commands/: doctor.rs  grub.rs  mod.rs  setup.rs
zos-cli/src/tui/: dashboard.rs  doctor.rs  grub.rs  migrate.rs  mod.rs  setup.rs  theme.rs
zos-core/: Cargo.toml
zos-core/src/: config.rs  lib.rs
zos-core/src/commands/: doctor.rs  grub.rs  install.rs  migrate.rs  setup.rs  status.rs  update.rs
zos-core/src/compositor/: hyprland.rs  mod.rs  zos_wm.rs
zos-daemon/: Cargo.toml
zos-daemon/src/: audio.rs  main.rs  tray.rs
zos-dock/: Cargo.toml  README.md
zos-dock/src/: config.rs  dock.rs  hypr.rs  hypr_events.rs  icons.rs  main.rs
zos-launcher/: Cargo.toml
zos-launcher/src/: desktop_files.rs  main.rs
zos-monitors/: Cargo.toml
zos-monitors/src/: main.rs
zos-notify/: Cargo.toml
zos-notify/src/: main.rs
zos-panel/: Cargo.toml
zos-panel/src/: main.rs
zos-power/: Cargo.toml
zos-power/src/: main.rs
zos-settings/: Cargo.toml
zos-settings/resources/: style.css
zos-settings/src/: app.rs  main.rs  theme.rs  tray.rs  widgets.rs
zos-settings/src/pages/: appearance.rs  audio.rs  boot.rs  devsetup.rs  display.rs  dock.rs  input.rs  mod.rs  network.rs  overview.rs  panel.rs  power.rs
zos-settings/src/pages/audio/: advanced.rs  buses.rs  input.rs  inputs.rs  mod.rs  output.rs  outputs.rs  routing.rs
zos-settings/src/services/: appearance.rs  hyprctl.rs  mod.rs  network.rs  pipewire.rs  pipewire_native.rs  power.rs
zos-system/: Cargo.toml
zos-system/src/: config.rs  main.rs
zos-system/src/commands/: doctor.rs  grub.rs  migrate.rs  mod.rs  setup.rs  status.rs  update.rs
zos-system/src/tui/: dashboard.rs  doctor.rs  grub.rs  migrate.rs  mod.rs  setup.rs
zos-tray/: Cargo.toml
zos-tray/src/: main.rs
zos-ui/: Cargo.toml
zos-ui-macros/: Cargo.toml
zos-ui-macros/src/: component.rs  lib.rs
zos-ui/examples/: clock.rs
zos-ui/src/: layer.rs  lib.rs  prelude.rs  theme.rs
zos-ui/src/config/: animations.rs  mod.rs  theme_overrides.rs
zos-ui/src/signal/: effect.rs  memo.rs  mod.rs  runtime.rs  timer.rs  value.rs
zos-ui/src/widgets/: card.rs  mod.rs  pill.rs  section_header.rs  status_dot.rs
zos-wm/: Cargo.toml  NOTICE  STATUS.md
zos-wm/src/: binds.rs  extension.rs  input_handler.rs  lib.rs  main.rs  render.rs  screencopy.rs  state.rs  udev.rs  winit.rs
zos-wm/src/anim/: animatable.rs  bezier.rs  manager.rs  mod.rs  value.rs
zos-wm/src/effects/: mod.rs  multi_render.rs  rounded.rs  shadow.rs
zos-wm/src/ipc/: mod.rs  protocol.rs  server.rs
zos-wm/src/protocols/: gamma_control.rs  mod.rs  output_management.rs  tearing_control.rs
zos-wm/src/shell/: element.rs  grabs.rs  mod.rs  output_state.rs  ssd.rs  workspace.rs  x11.rs  xdg.rs
zos-wm/src/shell/tiling/: dwindle.rs  mod.rs
