[workspace]
resolver = "2"
members = [
    "zos-cli",
    "zos-core",
    "zos-settings",
    "zos-dock",
    "zos-daemon",
    "zos-wm",
    "zos-ui",
    "zos-ui-macros",
    "zos-panel",
    "zos-power",
    "zos-monitors",
    "zos-notify",
    "zos-launcher",
]

[profile.release]
strip = true
lto = true
opt-level = "z"
