[package]
name = "zos"
version = "0.1.0"
edition = "2021"
description = "System management TUI for zOS"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
chrono = "0.4"

[profile.release]
strip = true
lto = true
opt-level = "z"
