[package]
name = "zos-daemon"
version = "0.1.0"
edition = "2021"
description = "Background daemon for zOS: system tray, audio config enforcement"

[[bin]]
name = "zos-daemon"
path = "src/main.rs"

[dependencies]
gtk = "0.15"
libayatana-appindicator = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
