[package]
name = "zos-dock"
version = "0.1.0"
edition = "2021"
description = "macOS-style dock for zOS"

[dependencies]
iced = { version = "0.14", features = ["svg", "image", "tokio"] }
iced_anim = "0.3"
iced_layershell = "0.17"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zos-core = { version = "0.1.0", path = "../zos-core" }
tokio = { version = "1.50.0", features = ["net", "io-util"] }
