[package]
name = "zos-monitors"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "Monitor configuration — replaces nwg-displays"

[dependencies]
zos-ui = { path = "../zos-ui" }
zos-core = { path = "../zos-core" }
iced = { version = "0.14", features = ["wayland", "tokio", "image", "svg"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "zos-monitors"
path = "src/main.rs"
