[package]
name = "zos-notify"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "Notification daemon — replaces swaync"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "zos-notify"
path = "src/main.rs"
