[package]
name = "zos-power"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "Power menu — replaces wlogout"

[dependencies]
zos-core = { path = "../zos-core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "zos-power"
path = "src/main.rs"
