[package]
name = "zos-power"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "Power menu — replaces wlogout"

[dependencies]
zos-ui = { path = "../zos-ui" }
zos-core = { path = "../zos-core" }
iced = { version = "0.14", features = ["wayland", "tokio", "image", "svg"] }
iced_layershell = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "zos-power"
path = "src/main.rs"
