[package]
name = "zos-settings"
version = "0.1.0"
edition = "2021"
description = "GTK4/Adwaita settings application for zOS"

[dependencies]
zos-core = { path = "../zos-core" }
relm4 = { version = "0.10.1", features = ["macros", "libadwaita"] }
zbus = "5.14.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde_json = "1.0.149"
cairo-rs = { version = "0.21", features = ["png"] }
