[package]
name = "zos-settings"
version = "0.1.0"
edition = "2021"
description = "Settings application for zOS (iced)"

[dependencies]
zos-core = { path = "../zos-core" }
zos-ui = { path = "../zos-ui", default-features = false }
zbus = "5.14.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
pipewire = "0.9"
async-channel = "2"
iced = { version = "0.14", features = ["svg", "image", "tokio"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
