[package]
name = "zos-ui-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "Proc-macros for zos-ui (#[component], #[panel_module], #[taskbar_icon])"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
