[package]
authors = ["Victor Berger <victor.berger@m4x.org>", "Drakulix (Victoria Brekenfeld)"]
edition = "2024"
license = "MIT"
name = "zos-wm"
publish = false
version = "0.0.1"

[[bin]]
name = "zos-wm"
path = "src/main.rs"

[dependencies]
bitflags = "2.2.1"
fps_ticker = {version = "1.0.0", optional = true}
image = {version = "0.25.1", default-features = false, optional = true, features = ["png"]}
rand = "0.8"
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thiserror = "1"
xcursor = {version = "0.3.3", optional = true}
xkbcommon = "0.8.0"
renderdoc = {version = "0.11.0", optional = true}
smithay-drm-extras = { git = "https://github.com/Smithay/smithay", rev = "27af99ef492ab4d7dc5cd2e625374d2beb2772f7", optional = true }
puffin_http = { version = "0.13", optional = true }
profiling = { version = "1.0" }
usvg = { version = "0.45", default-features = false }
resvg = { version = "0.45", default-features = false }
tiny-skia = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zos-ui = { path = "../zos-ui", default-features = false }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "27af99ef492ab4d7dc5cd2e625374d2beb2772f7"
default-features = false
features = ["desktop", "wayland_frontend"]

[dependencies.x11rb]
default-features = false
features = ["composite"]
optional = true
version = "0.13.0"

[build-dependencies]
gl_generator = "0.14"

[features]
debug = ["fps_ticker", "image/png", "renderdoc"]
default = ["winit", "xwayland"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
test_all_features = ["default", "debug"]
udev = [
  "smithay-drm-extras",
  "smithay/backend_libinput",
  "smithay/backend_udev",
  "smithay/backend_drm",
  "smithay/backend_gbm",
  "smithay/backend_egl",
  "smithay/backend_session_libseat",
  "image",
  "smithay/renderer_gl",
  "smithay/renderer_pixman",
  "smithay/renderer_multi",
  "xcursor",
]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
x11 = ["smithay/backend_x11", "x11rb", "smithay/renderer_gl", "smithay/backend_vulkan"]
xwayland = ["smithay/xwayland", "x11rb", "smithay/x11rb_event_source", "xcursor"]
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
profile-with-tracy = ["profiling/profile-with-tracy"]
profile-with-tracy-mem = ["profile-with-tracy"]
renderer_sync = []
